axis-aligned majority of work