@@ -10,13 +10,17 @@ import net.minecraft.nbt.NbtUtils;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.util.FastColor;
+import net.minecraft.util.Mth;
+import net.minecraft.world.entity.Entity;
 import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.LevelReader;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
+import net.minecraft.world.phys.Vec2;
 import net.minecraft.world.phys.Vec3;
 import net.minecraft.world.phys.Vec3;
 import net.minecraftforge.common.world.ForgeChunkManager;
@@ -25,16 +29,26 @@ import net.minecraft.world.phys.shapes.BooleanOp;
 import net.minecraft.world.phys.shapes.Shapes;
 import net.minecraft.world.phys.shapes.VoxelShape;
 import net.mistersecret312.aperture_innovations.ApertureInnovations;
+import net.mistersecret312.aperture_innovations.advancements.PortalTravelCriterion;
+import net.mistersecret312.aperture_innovations.capabilities.ApertureCapability;
 import net.mistersecret312.aperture_innovations.datapack.PortalGunVariant;
+import net.mistersecret312.aperture_innovations.init.AdvancementInit;
 import net.mistersecret312.aperture_innovations.init.NetworkInit;
 import net.mistersecret312.aperture_innovations.init.SoundInit;
+import net.mistersecret312.aperture_innovations.init.StatisticsInit;
+import net.mistersecret312.aperture_innovations.network.ClientboundEntityPortalLerpPacket;
 import net.mistersecret312.aperture_innovations.network.ClientboundPortalAmbientSoundPacket;
 import net.mistersecret312.aperture_innovations.network.ClientboundPortalSoundsPacket;
+import net.mistersecret312.aperture_innovations.network.ClientboundTeleportMomentumPacket;
 import org.joml.Matrix4f;
+import org.joml.Quaternionf;
+import org.joml.Vector3f;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 
 public class PortalLink
@@ -91,11 +105,9 @@ public class PortalLink
 
 		if(portalLevel != null)
 		{
-			int x = (int) pos.x;
-			int z = (int) pos.z;
-			PacketDistributor.sendToPlayersTrackingChunk(portalLevel, new ChunkPos(x, z),
+			NetworkInit.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(() -> level.getChunkAt(
+							BlockPos.containing(pos))),
 					new ClientboundPortalSoundsPacket.OpenPortal(linkID, true));
-
 		}
 
 		PortalLinkData.get(level).setDirty(linkID, true);
@@ -127,21 +139,39 @@ public class PortalLink
 
 		if(portalLevel != null)
 		{
-			int x = (int) pos.x;
-			int z = (int) pos.z;
-			PacketDistributor.sendToPlayersTrackingChunk(portalLevel, new ChunkPos(x, z),
+			NetworkInit.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(() -> level.getChunkAt(
+							BlockPos.containing(pos))),
 					new ClientboundPortalSoundsPacket.OpenPortal(linkID, false));
 		}
 
 		PortalLinkData.get(level).setDirty(linkID, false);
 	}
 
-	public boolean checkForValidity(Level level, Vec3 position, float xRot, float yRot, Direction direction, boolean isPrimary)
+	public boolean checkForValidity(Level level, Vec3 position, float xRot, float yRot, Direction direction, UUID id, boolean isPrimary)
 	{
 		AABB portalBox = PortalUtilities.getPortalBoundingBox(position, xRot, yRot).inflate(0.025);
 		AABB placementBox = PortalUtilities.getPortalPlacementBox(position, xRot, yRot).inflate(0.025);
 
-		Pair<UUID, Boolean> closestPortalPair = PortalUtilities.getClosestPortal(level, position);
+		Portal self;
+		if(level.isClientSide())
+		{
+			ClientPortalLink link =  PortalUtilities.getPortalLinks().get(id);
+			if(isPrimary)
+				self = link.getPrimaryPortal();
+			else self = link.getSecondaryPortal();
+		}
+		else
+		{
+			PortalLink link = PortalUtilities.getPortalLinks(level).get(id);
+			if(isPrimary)
+				self = link.getPrimaryPortal();
+			else self = link.getSecondaryPortal();
+		}
+		Pair<UUID, Boolean> closestPortalPair;
+		if(self.getPosition() == null)
+			closestPortalPair = PortalUtilities.getClosestPortal(level, position, isPrimary);
+
+		else closestPortalPair = PortalUtilities.getClosestPortal(level, self);
 		Portal closestPortal;
 		if(level.isClientSide() && closestPortalPair.getFirst() != null)
 		{
@@ -160,16 +190,35 @@ public class PortalLink
 		else
 			closestPortal = null;
 
+		if(self.equals(closestPortal))
+			closestPortal = null;
+
 		VoxelShape placementShape = Shapes.create(placementBox);
 
+		AABB portalBoxCopy = PortalUtilities.getPortalPlacementBox(position, xRot, yRot).inflate(0.025).deflate(0.025)
+											.move(Vec3.directionFromRotation(xRot+(direction.getAxis().isVertical() ? 180 : 0), yRot+180)
+													  .multiply(0.15, 0.15, 0.15));
+
+		AtomicBoolean hasAir = new AtomicBoolean();
+		BlockPos.betweenClosedStream(portalBoxCopy).forEach(pos ->
+			{
+				BlockState state = level.getBlockState(pos);
+				if(state.isAir())
+					hasAir.set(true);
+			});
+
+		if(hasAir.get())
+			return false;
+
 		AtomicReference<VoxelShape> placementReference = new AtomicReference<>(placementShape);
+		Portal finalClosestPortal = closestPortal;
 		BlockPos.betweenClosedStream(portalBox).forEach(pos ->
 			{
 				BlockState state = level.getBlockState(pos);
-				if(closestPortal != null)
+				if(finalClosestPortal != null)
 				{
-					VoxelShape shape = Shapes.create(PortalUtilities.getPortalPlacementBox(closestPortal.getPosition(),
-							closestPortal.getXRotation(), closestPortal.getYRotation()));
+					VoxelShape shape = Shapes.create(PortalUtilities.getPortalPlacementBox(finalClosestPortal.getPosition(),
+							finalClosestPortal.getXRotation(), finalClosestPortal.getYRotation()).inflate(0.05));
 
 					if(!placementReference.get().isEmpty())
 						placementReference.set(Shapes.join(placementReference.get(), shape, BooleanOp.ONLY_FIRST));
@@ -177,7 +226,7 @@ public class PortalLink
 				if(!state.isAir())
 				{
 					VoxelShape shape = state.getCollisionShape(level, pos)
-											   .move(pos.getX(), pos.getY(), pos.getZ());
+											.move(pos.getX(), pos.getY(), pos.getZ());
 
 					if(state.is(ApertureInnovations.IMPORTALABLE))
 						shape = Shapes.create(shape.bounds().inflate(0.025));
@@ -186,12 +235,13 @@ public class PortalLink
 						placementReference.set(Shapes.join(placementReference.get(), shape, BooleanOp.ONLY_FIRST));
 				}
 			});
+
 		placementShape = placementReference.get();
 		List<AABB> shapeList = placementShape.toAabbs();
 
 		if(!shapeList.isEmpty())
 		{
-			AABB firstPart = shapeList.getFirst();
+			AABB firstPart = shapeList.get(0);
 
 			boolean wall = direction.getAxis().isHorizontal();
 
@@ -199,19 +249,20 @@ public class PortalLink
 			if(!wall)
 			{
 				equal = firstPart.maxX == placementBox.maxX && firstPart.minX == placementBox.minX
-						&& firstPart.maxZ == placementBox.maxZ && firstPart.minZ == placementBox.minZ;
+								&& firstPart.maxZ == placementBox.maxZ && firstPart.minZ == placementBox.minZ;
 			}
 			if(wall)
 			{
 				if(direction.getAxis().equals(Direction.Axis.Z))
 				{
 					equal = firstPart.maxX == placementBox.maxX && firstPart.minX == placementBox.minX
-							&& firstPart.maxY == placementBox.maxY && firstPart.minY == placementBox.minY;
+									&& firstPart.maxY == placementBox.maxY && firstPart.minY == placementBox.minY;
+
 				}
 				if(direction.getAxis().equals(Direction.Axis.X))
 				{
 					equal = firstPart.maxY == placementBox.maxY && firstPart.minY == placementBox.minY
-							&& firstPart.maxZ == placementBox.maxZ && firstPart.minZ == placementBox.minZ;
+									&& firstPart.maxZ == placementBox.maxZ && firstPart.minZ == placementBox.minZ;
 				}
 			}
 
@@ -238,7 +289,7 @@ public class PortalLink
 
 	public void updateVariant(Level level, ResourceLocation variantKey)
 	{
-		if(this.variantKey != variantKey)
+		if(!this.variantKey.equals(variantKey))
 		{
 			this.variantKey = variantKey;
 			PortalLinkData.get(level).setDirty(linkID, true);
@@ -262,9 +313,8 @@ public class PortalLink
 			ServerLevel portalLevel = level.getServer().getLevel(primaryPortal.getDimension());
 			if(portalLevel != null)
 			{
-				int x = (int) primaryPortal.getPosition().x;
-				int z = (int) primaryPortal.getPosition().z;
-				PacketDistributor.sendToPlayersTrackingChunk(portalLevel, new ChunkPos(x, z),
+				NetworkInit.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(() -> level.getChunkAt(
+								BlockPos.containing(primaryPortal.getPosition()))),
 						new ClientboundPortalSoundsPacket.FizzlePortal(linkID, true));
 			}
 		}
@@ -283,11 +333,9 @@ public class PortalLink
 			ServerLevel portalLevel = level.getServer().getLevel(secondaryPortal.getDimension());
 			if(portalLevel != null)
 			{
-				int x = (int) secondaryPortal.getPosition().x;
-				int z = (int) secondaryPortal.getPosition().z;
-				PacketDistributor.sendToPlayersTrackingChunk(portalLevel, new ChunkPos(x, z),
-						new ClientboundPortalSoundsPacket.FizzlePortal(linkID, false));
-
+				NetworkInit.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(() -> level.getChunkAt(
+								BlockPos.containing(secondaryPortal.getPosition()))),
+						new ClientboundPortalSoundsPacket.FizzlePortal(linkID, true));
 			}
 		}
 		int color = secondaryPortal.getColor();
@@ -329,6 +377,166 @@ public class PortalLink
 		if(isOpen())
 		{
 			return !primaryPortal.getDimension().equals(secondaryPortal.getDimension());
+		}
+		return false;
+	}
+
+	public boolean teleportLogic(Entity entity, ApertureCapability aperture,
+								 PortalLink link, Level level, boolean isPrimary)
+	{
+		UUID linkID = link.linkID;
+		if(level.isClientSide())
+			return false;
+		if(aperture.ignorePortalsTime != 0)
+			return false;
+
+		Vec3 currentPos = entity.position().add(0, entity.getBbHeight() / 2f, 0);
+
+		Vec3 speed = entity.getDeltaMovement();
+		Vec3 nextPos = currentPos.add(speed.multiply(2f, 2f, 2f));
+
+		AABB movementBox = entity.getBoundingBox().expandTowards(speed);
+		if(link == null || !link.isOpen())
+			return false;
+
+		Portal portal = isPrimary ? link.getPrimaryPortal() : link.getSecondaryPortal();
+		Portal otherPortal = isPrimary ? link.getSecondaryPortal() : link.getPrimaryPortal();
+
+		double distance = portal.getPosition().distanceTo(entity.position());
+		if(distance < 6 && otherPortal.isMoonshot())
+		{
+			Direction direction = PortalUtilities.getPortalDirection(level, linkID, isPrimary);
+
+			Vec3 portalPos = PortalUtilities.getPortalTeleportBox(portal.getPosition(), portal.getXRotation(),
+					portal.getYRotation()).getCenter();
+			portalPos = portalPos.add(direction.getOpposite().getStepX() * entity.getBbWidth() / 2f,
+					direction.getOpposite().getStepY() * entity.getBbHeight() / 1.25f,
+					direction.getOpposite().getStepZ() * entity.getBbWidth() / 2f);
+
+			Vec3 pushVector = portalPos.subtract(entity.position()).multiply(0.08, 0.08, 0.08);
+			entity.push(pushVector.x, pushVector.y, pushVector.z);
+			if(entity instanceof ServerPlayer player)
+				NetworkInit.INSTANCE.send(PacketDistributor.PLAYER.with(() -> player),
+					new ClientboundTeleportMomentumPacket(player.getDeltaMovement()));
+		}
+
+		AABB teleportBox = PortalUtilities.getPortalTeleportBox(portal.getPosition(), portal.getXRotation(),
+				portal.getYRotation());
+
+		if(movementBox.intersects(teleportBox))
+		{
+			Direction direction = PortalUtilities.getPortalDirection(level, linkID, isPrimary);
+			Direction otherDirection = PortalUtilities.getPortalDirection(level, linkID, !isPrimary);
+			Vector3f normal = direction.step();
+
+			Vec3 portalPos = PortalUtilities.getPortalTeleportBox(portal.getPosition(), portal.getXRotation(),
+					portal.getYRotation()).getCenter();
+			portalPos = portalPos.add(direction.getOpposite().getStepX() * entity.getBbWidth() / 2f,
+					direction.getOpposite().getStepY() * entity.getBbHeight() / 1.25f,
+					direction.getOpposite().getStepZ() * entity.getBbWidth() / 2f);
+
+			Vec3 offsetFromPortal = currentPos.subtract(portalPos);
+			Vec3 offsetPortalPlace = currentPos.subtract(portal.getPosition());
+			Vec3 nextOffsetFromPortal = nextPos.subtract(portalPos);
+
+			double relativePos = offsetFromPortal.dot(new Vec3(normal));
+			double nextRelativePos = nextOffsetFromPortal.dot(new Vec3(normal));
+
+			boolean slow = portalPos.closerThan(currentPos, 0.4f) && relativePos > 0;
+			boolean fast = relativePos > 0 && nextRelativePos <= 0;
+
+			if(slow || fast)
+			{
+				Quaternionf portalQ = new Quaternionf().rotationYXZ((float) (Math.PI - Math.toRadians(
+								portal.getYRotation() + (direction.getAxis().isHorizontal() ? 180 : 0))),
+						(float) Math.toRadians(-portal.getXRotation() - 90), 0);
+
+				Quaternionf otherPortalQ = new Quaternionf().rotationYXZ((float) (Math.PI - Math.toRadians(
+								otherPortal.getYRotation() + (direction.getAxis().isHorizontal() ? 180 : 0))),
+						(float) Math.toRadians(-otherPortal.getXRotation() - 90), 0);
+
+				if(direction.getAxis().isHorizontal())
+					aperture.setIgnorePortalsTime(5);
+				if(link.isInWorld() && link.isInterdimensionalLink())
+					aperture.setIgnorePortalsTime(20);
+
+				Vector3f newSpeed = portalQ.invert(new Quaternionf()).transform(speed.toVector3f());
+				otherPortalQ.rotateZ((float) Math.toRadians(180), new Quaternionf()).transform(newSpeed);
+
+				if(otherPortal.getXRotation() == -90 && newSpeed.length() < 0.5)
+					newSpeed.add(0, 0.05f, 0);
+				if(portal.getXRotation() == 0 && otherPortal.getXRotation() == -90)
+					newSpeed.add(0f, 0.5f, 0f);
+
+				Vector3f rotatedOffset = portalQ.invert(new Quaternionf()).transform(offsetPortalPlace.toVector3f());
+				otherPortalQ.rotateZ((float) Math.toRadians(180), new Quaternionf()).transform(rotatedOffset);
+
+				Vec3 targetPos;
+				if(otherPortal.isMoonshot()) targetPos = portalPos.add(0, 1000, 0);
+				else targetPos = otherPortal.getPosition().subtract(0, entity.getBbHeight() / 2, 0);
+
+				targetPos = targetPos.add(otherDirection.getStepX() * 0.05, otherDirection.getStepY() * 0.05,
+						otherDirection.getStepZ() * 0.05);
+
+				entity.setDeltaMovement(new Vec3(newSpeed));
+				entity.hasImpulse = true;
+				entity.resetFallDistance();
+
+				Quaternionf rot = new Quaternionf().rotationYXZ((180 - entity.getYRot()) * Mth.DEG_TO_RAD,
+														   -entity.getXRot() * Mth.DEG_TO_RAD, 0).premul(portalQ.invert(new Quaternionf()))
+												   .premul(otherPortalQ.rotateZ((float) Math.toRadians(180),
+														   new Quaternionf())).conjugate();
+
+				ServerLevel targetLevel;
+				if(otherPortal.isMoonshot()) targetLevel = (ServerLevel) level;
+				else targetLevel = level.getServer().getLevel(otherPortal.getDimension());
+				if(targetLevel == null)
+					return false;
+
+				float yaw = (float) Math.atan2(-(rot.x * rot.z + rot.y * rot.w) * 2,
+						2 * (rot.y * rot.y + rot.z * rot.z) - 1);
+//				entity.setPos(targetPos);
+
+				Vec2 portalRot = PortalUtilities.getPortalRotation(level, linkID, isPrimary);
+				Vec2 otherPortalRot = PortalUtilities.getPortalRotation(level, linkID, !isPrimary);
+
+				if(portalRot.y - otherPortalRot.y == 180 && portalRot.x == -90) yaw += (float) Math.toRadians(180);
+
+				NetworkInit.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(() -> level.getChunkAt(
+						BlockPos.containing(portal.getPosition()))),
+						new ClientboundPortalSoundsPacket.EnterPortal(link.linkID, isPrimary));
+
+//				entity.teleportTo(targetLevel, targetPos.x, targetPos.y, targetPos.z, Set.of(),
+//						(float) Math.toDegrees(yaw) + (direction.getAxis().isVertical() ? 180 : 0), entity.getXRot());
+//				entity.setOldPosAndRot();
+
+				NetworkInit.INSTANCE.send(PacketDistributor.TRACKING_CHUNK.with(() -> level.getChunkAt(
+								BlockPos.containing(otherPortal.getPosition()))),
+						new ClientboundPortalSoundsPacket.EnterPortal(link.linkID, isPrimary));
+
+				if(entity instanceof ServerPlayer player)
+				{
+					player.awardStat(StatisticsInit.TIMES_USED_PORTALS.get(), 1);
+//					NetworkInit.INSTANCE.send(PacketDistributor.PLAYER.with(() -> player),
+//							new ClientboundTeleportMomentumPacket(new Vec3(newSpeed)));
+
+					aperture.setPortal(Pair.of(linkID, isPrimary));
+					aperture.updateDistance();
+					aperture.setFrictionlessTime(100 * 20);
+					PortalTravelCriterion.INSTANCE.trigger(player, portal.getDimension().location(),
+							targetLevel.dimension().location(), (long) portal.getPosition().distanceToSqr(targetPos),
+							(long) aperture.verticalDistance, (long) aperture.horizontalDistance, otherPortal.isMoonshot());
+				}
+				else
+				{
+					NetworkInit.INSTANCE.send(PacketDistributor.TRACKING_ENTITY.with(() -> entity),
+							new ClientboundEntityPortalLerpPacket(entity.getId(), targetPos.toVector3f(),
+									(float) Math.toDegrees(yaw) + (direction.getAxis().isVertical() ? 180 : 0),
+									entity.getXRot()));
+				}
+
+				return true;
+			}
 		}
 		return false;
 	}
